# beeroux-psx

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md  iso.xml  system.cnf
.devcontainer/: devcontainer.json
assets/: Beeroux_square.tim
src/: main.c
